--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
     "@react-navigation/stack": "^6.3.15",
+    "axios": "^1.3.4",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
@@ -30,6 +31,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.26.1",
     "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
