--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/drawer": "^6.6.1",
@@ -22,6 +23,7 @@
     "mongoose": "^7.0.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.4.0",
@@ -31,6 +33,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.5.0",
     "react-native-webview": "^11.26.1",
     "toggle-switch-react-native": "^3.3.0"
   },
