--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "^3.5.0",
     "react-native-webview": "^11.26.1",
-    "toggle-switch-react-native": "^3.3.0"
+    "toggle-switch-react-native": "^3.3.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -46,6 +49,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.28",
     "@types/react-native": "^0.71.3",
+    "@types/react-native-svg-charts": "^5.0.12",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
