--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "axios": "^1.3.4",
     "events": "^3.3.0",
     "express": "^4.18.2",
+    "lottie-react-native": "^6.0.0-rc.3",
     "mongoose": "^7.0.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.4.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.2.0",
     "react-native-progress-bar-animated": "^1.0.6",
     "react-native-reanimated": "^2.14.4",
