--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-masked-view/masked-view": "^0.2.8",
@@ -35,6 +36,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-simple-bottom-sheet": "^1.0.4",
     "react-native-svg": "^7.2.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
