--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-maps": "1.4.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.2.0",
+    "react-native-progress": "^5.0.0",
     "react-native-progress-bar-animated": "^1.0.6",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
