--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.11",
     "@react-navigation/stack": "^6.3.15",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "lottie-react-native": "^6.0.0-rc.3",
@@ -27,6 +28,7 @@
     "react-native": "0.71.3",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-config": "^1.5.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
