--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.29.3",
     "events": "^3.3.0",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^6.0.0-rc.3",
     "mongoose": "^7.0.0",
     "react": "18.2.0",
