--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.0.0-rc.3",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
